# spotify-to-ytmusic

./: .gitignore  LICENSE  README.md  pyproject.toml
spotify_to_ytmusic/: main.py  spotify_client.py  transfer.py  utils.py  ytmusic_client.py
spotify_to_ytmusic_cli/: main.py  matching_utils.py  spotify_client.py  transfer.py  transfer_cli.py  transfer_core.py  transfer_session.py  transfer_tui.py  ui.py  ytmusic_client.py
