[tool.poetry]
name = "spotify-to-ytmusic-cli"
version = "0.1.0"
description = "Port Spotify likes and playlists to YT Music"
authors = ["Vincent Mathis <vincentmathis@protonmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
spotipy = "^2.25.1"
ytmusicapi = "^1.11.0"
questionary = "^2.1.0"
rapidfuzz = "^3.13.0"
rich = "^14.1.0"
platformdirs = "^4.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
